# cuda-perception-kernels

./: CMakeLists.txt  README.md
benchmarks/: bench_bilateral_filter.cu
include/kernels/: bilateral_filter.cuh
src/: bilateral_filter.cu
tests/: test_bilateral_filter.cu
